JS function created to get through branching logic of PQuiz

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	<div class="col-md-12 bkgd-cover bkgd-img disp-table h-100 w-100pct">
 
-		<div><</div>
+		<div></div>
 		
 		<div class="row txt-center">
 			
@@ -37,6 +37,12 @@
 		</div>
 
 	</div>
+
+	<!-- my own test divs-->
+	<div id="question-div">FOO</div>
+	<div id="answer-a-div" data-answerId="null" class="JS-answer-choice">BAR</div>
+	<div id="answer-b-div" data-answerId="null" class="JS-answer-choice">BAR</div>
+
 
 	<!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
