end of class 6 27

--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
 
 	<!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+	<script src="assets/javascript/hmac-sha256.js"></script>
+	<script src="assets/javascript/enc-base64.js"></script>
+	
+	<script src="assets/javascript/apis.js"></script>
     
     <!-- JAVASCRIPT -->
     <script src="assets/javascript/app-quiz.js" type="text/javascript"></script>
