--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 	<!-- GOOGLE FONTS -->
 	<link href="https://fonts.googleapis.com/css?family=Muli:300,700|Pacifico" rel="stylesheet">
 
-	<!-- BOOTSTRAP CDN-->
+	<!-- BOOTSTRAP CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <!-- STYLESHEET FLICKITY -->
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 
     <!-- STYLESHEET -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -146,7 +149,7 @@
 
 		<div class="font-maroon txt-algn-cntr marg-b-40">
 			<p class="font-fam-pacifico font-size-50 ms-fs-30">Occasions</p>
-			<p class="font-fam-muli font-size-20">Filter your search by selecting the event you're shopping for.</p>
+			<p class="font-fam-muli font-size-23">Filter your search by selecting the event you're shopping for.</p>
 		</div>
 		
 		<div class="row bkgd-white txt-algn-cntr">
@@ -195,71 +198,123 @@
 
 	</div>
 
+
+
 	<!-- QUESTIONAIRE -->
 	<div class="row quest-img marg-0" id="questionnaire">
+
 		<div class="marg-60">
+
+			<!-- QUESTIONNAIRE HEADING -->
 			<div class="font-maroon txt-algn-cntr marg-b-40">
 				<p class="font-fam-pacifico font-size-50 ms-fs-30">Questionnaire</p>
-				<p class="font-fam-muli font-size-20">Narrow down your options by answering the following questions about the gift receiver.</p>
+				<p class="font-fam-muli font-size-23">Narrow down your options by answering the following questions about the gift receiver.</p>
 			</div>
 
-			<div class="font-fam-muli font-maroon txt-algn-cntr">
-				<p class="font-bold font-size-20">This is where question 1 will go.</p>
+			<!-- QUESTIONNAIRE BOX -->
+			<div class="bord-4-solid-maroon font-fam-muli font-maroon pad-30 txt-algn-cntr">
+
+				<!-- QUESTION -->
+				<p id="question-div" class="questionHeader font-bold font-size-17"></p>
+
 				<div class="row">
+
+					<!-- ANSWER A -->
 					<div class="col-md-6 col-sm-12 pad-10-20">
-						<div class="question-button">Question 1: Option 2</div>
+						<div class="question-button JS-answer-choice" id="answer-a-div" data-answerId="null">Question 1: Option 2</div>
 					</div>
+	
+					<!-- ANSWER B -->
 					<div class="col-md-6 col-sm-12 pad-10-20">
-						<div class="question-button">Question 1: Option 2</div>
+						<div class="question-button JS-answer-choice" id="answer-b-div" data-answerId="null">Question 1: Option 2</div>
+					</div>
+
+				</div>
+
+				<!-- PROGRESS BAR -->
+				<div class="row marg-20-5">
+					<div class="progress progress-striped active">
+						<div class="progress-bar" id="bar"></div>
 					</div>
 				</div>
+
+				<!-- RESTART -->
+				<div class="startOver font-bold font-fam-muli marg-0-auto" onclick=" reload();">
+					<div class="">Restart</div>
+				</div>
+
 			</div>
-		</div>
-	</div>
 
-
-
-<!-- 	<div class="row">
-    	<div id="question-div" class="questionHeader"></div>
-    </div>
-
-    <div class="row">
-
-		<div class="col-md-6">
-        	<button class="btn btn-default">
-        		<div id="answer-a-div" data-answerId="null" class="JS-answer-choice"></div>
-        	</button>
-		</div>
-
-		<div class="col-md-6">
-			<button class="btn btn-default">
-				<div id="answer-b-div" data-answerId="null" class="JS-answer-choice"></div>
-			</button>
 		</div>
 
 	</div>
 
-	<div class="row">
-		<div class="progress progress-striped active">
-			<div class="progress-bar" id="bar"></div>
+
+
+	<!-- PRODUCTS -->
+	<div class="">
+
+		<!-- AMAZON -->
+		<div class="">
+			<div></div>
 		</div>
+
+		<!-- EBAY -->
+		<div class="">
+			<div></div>
+		</div>
+
+		<!-- ETSY -->
+		<div class="">
+			<div></div>
+		</div>
+		
 	</div>
-    
-    <div class="startOver" onclick=" reload();">
-    	<button class="btn btn-default">Start Again</button>
-	</div> -->
 
 
 
 	<!-- FOOTER -->
+	<footer class="footer">
 
-<nav class="row navbar navbar-default navbar-static-bottom bkgd-dgreen marg-0">
-	<div class="col-md-12 container row marg-0 pad-0">
-		<p class="font-fam-muli font-lgreen font-size-13 pad-30 txt-algn-cntr">&copy;Copyright 2017 GiftPitch</p>
-	</div>
-</nav>
+		<div class="container bkgd-tan marg-0 pad-30-60 w-100pct ms-txt-algn-cntr">
 
-	
+			<div class="float-l marg-t-20 vert-algn-cntr w-70">
+				<img src="assets/images/GiftPitch-logo-brown.png" alt="GiftPitch" class="w-100pct">
+			</div>
+
+			<div class="float-r font-brown font-fam-muli font-size-13 txt-algn-r ms-txt-algn-cntr">
+				<ul>
+					<li>gifthelp@giftpitch.com</li>
+					<li>1-800-012-3456</li>
+					<li>339 E Chicago Avenue</li>
+					<li>Chicago, Illinois 60611</li>
+				</ul>
+
+				<p>&copy;Copyright 2017 GiftPitch</p>
+			</div>
+
+		</div>
+
+	</footer>
+
+
+
+<!-- 	<div class="row">
+		<div class="gallery js-flickity">
+		  <img class="gallery-cell"  id=etsy0 alt='' src=''>
+		  <img class="gallery-cell"  id=etsy1 alt='' src=''>
+		  <img class="gallery-cell"  id=etsy2 alt='' src=''>
+		  <img class="gallery-cell"  id=etsy3 alt='' src=''>
+		  <img class="gallery-cell"  id=etsy4 alt='' src=''>
+		  <img class="gallery-cell"  id=etsy5 alt='' src=''>
+		  <img class="gallery-cell"  id=etsy6 alt='' src=''>
+		  <img class="gallery-cell"  id=etsy7 alt='' src=''>
+		  <img class="gallery-cell"  id=etsy9 alt='' src=''>
+		  <img class="gallery-cell"  id=etsy9 alt='' src=''>
+		</div>
+	</div> -->
+
+
 
 	<!-- BOOTSTRAP JQUERY -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -270,11 +325,14 @@
 	<!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     
-    <!-- JAVASCRIPT APP-QUIZ-->
+    <!-- JAVASCRIPT APP-QUIZ -->
     <script src="assets/javascript/app-quiz.js" type="text/javascript"></script>
 
-    <!-- JAVASCRIPT APP-STYLE-->
+    <!-- JAVASCRIPT APP-STYLE -->
     <script src="assets/javascript/app-style.js" type="text/javascript"></script>
+
+    <!-- JAVASCRIPT FLICKITY-STYLE -->
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 	
 </body>
 
