--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-
+s
 	<meta charset="UTF-8">
 
 	<title>GiftPitch</title>
@@ -22,6 +22,8 @@
 
     <!-- STYLESHEET -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<!-- STYLESHEET Flickity-->
+	<link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 
 	<!-- FAVICON -->
 	<link rel="icon" href="assets/images/GiftPitch-logo-favicon.png" sizes="16x16">
@@ -218,8 +220,7 @@
 	</div>
 
 
-
-<!-- 	<div class="row">
+<div class="row">
     	<div id="question-div" class="questionHeader"></div>
     </div>
 
@@ -244,10 +245,33 @@
 			<div class="progress-bar" id="bar"></div>
 		</div>
 	</div>
+
     
     <div class="startOver" onclick=" reload();">
     	<button class="btn btn-default">Start Again</button>
-	</div> -->
+	</div> 
+
+<br>
+
+<div class="row">
+<div class="gallery js-flickity">
+  <img class="gallery-cell"  id=etsy0 alt='' src=''>
+  <img class="gallery-cell"  id=etsy1 alt='hello' src=''>
+  <img class="gallery-cell"  id=etsy2 alt='' src=''>
+  <img class="gallery-cell"  id=etsy3 alt='' src=''>
+  <img class="gallery-cell"  id=etsy4 alt='' src=''>
+  <img class="gallery-cell"  id=etsy5 alt='hello' src=''>
+  <img class="gallery-cell"  id=etsy6 alt='' src=''>
+  <img class="gallery-cell"  id=etsy7 alt='' src=''>
+  <img class="gallery-cell"  id=etsy9 alt='' src=''>
+  <img class="gallery-cell"  id=etsy9 alt='' src=''>
+</div>
+<p class="caption"></p>
+
+
+</div>
+
+
 
 
 
@@ -275,6 +299,13 @@
 
     <!-- JAVASCRIPT APP-STYLE-->
     <script src="assets/javascript/app-style.js" type="text/javascript"></script>
+
+    <!-- JAVASCRIPT Flickity-STYLE-->
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+
+    <!-- JAVASCRIPT apis-STYLE-->
+    <script src="assets/javascript/apis.js" type="text/javascript"></script>
+
 	
 </body>
 
