edit to the URL for loop

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                     		 <a class="left btn" href="#carousel-example"
                        		 data-slide="prev">Back</a>
                        		 <a class="right btn" href="#carousel-example"
-                             data-slide="next">Foward</a>
+                             data-slide="next">Forward</a>
                 </div>
             </div>
         </div>
