created hover effect for title

--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
 	<!-- BOOTSTRAP CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-    <!-- STYLESHEET FLICKITY -->
-    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.css">
+    <!-- STYLESHEET Balloon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/balloon-css/0.2.4/balloon.min.css">	
 
     <!-- STYLESHEET -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 	<!-- FAVICON -->
 	<link rel="icon" href="assets/images/GiftPitch-logo-favicon.png" sizes="16x16">
+
+
 
 </head>
 
@@ -296,9 +298,8 @@
                                             <p class='priceItem0' class="price-text-color"></p>
                                         </div>
                                     </div>
-                                    <div class="separator clear-left">
-                                        <p class="btn-details">
-                                            <i class="fa fa-list"></i><a class='details' id='giftURL0' href="" class="hidden-sm">More Details</a></p>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetails0" data-balloon="" data-balloon-pos="up" class='details' id='giftURL0' href="" class="hidden-sm">More Details</a></button> 
                                     </div>
                                     <div class="clearfix">
                                     </div>
@@ -317,9 +318,8 @@
                                             <p class='priceItem1' class="price-text-color"></p>
                                         </div>
                                     </div>
-                                    <div class="separator clear-left">
-                                        <p class="btn-details">
-                                            <i class="fa fa-list"></i><a class='details' id='giftURL1' href="" class="hidden-sm">More Details</a></p>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetails1" data-balloon="" data-balloon-pos="up" class='details' id='giftURL1' href="" class="hidden-sm">More Details</a></button> 
                                     </div>
                                     <div class="clearfix">
                                     </div>
@@ -338,9 +338,8 @@
                                             <p class='priceItem2' class="price-text-color"></p>
                                         </div>
                                     </div>
-                                    <div class="separator clear-left">
-                                        <p class="btn-details">
-                                            <i class="fa fa-list"></i><a class='details' id='giftURL2' href="" class="hidden-sm">More Details</a></p>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetails2" data-balloon="" data-balloon-pos="up" class='details' id='giftURL2' href="" class="hidden-sm">More Details</a></button> 
                                     </div>
                                     <div class="clearfix">
                                     </div>
@@ -359,9 +358,8 @@
                                             <p class='priceItem3' class="price-text-color"></p>
                                         </div>
                                     </div>
-                                    <div class="separator clear-left">
-                                        <p class="btn-details">
-                                            <i class="fa fa-list"></i><a class='details' id='giftURL3' href="" class="hidden-sm">More Details</a></p>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetails3" data-balloon="" data-balloon-pos="up" class='details' id='giftURL3' href="" class="hidden-sm">More Details</a></button> 
                                     </div>
                                     <div class="clearfix">
                                     </div>
@@ -384,9 +382,8 @@
                                             <p class='priceItem4' class="price-text-color"></p>
                                         </div>
                                     </div>
-                                    <div class="separator clear-left">
-                                        <p class="btn-details">
-                                            <i class="fa fa-list"></i><a class='details' id='giftURL4' href="" class="hidden-sm">More Details</a></p>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetails4" data-balloon="" data-balloon-pos="up" class='details' id='giftURL4' href="" class="hidden-sm">More Details</a></button> 
                                     </div>
                                     <div class="clearfix">
                                     </div>
@@ -405,9 +402,8 @@
                                             <p class='priceItem5' class="price-text-color"></p>
                                         </div>
                                     </div>
-                                    <div class="separator clear-left">
-                                        <p class="btn-details">
-                                            <i class="fa fa-list"></i><a class='details' id='giftURL5' href="" class="hidden-sm">More Details</a></p>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetails5" data-balloon="" data-balloon-pos="up" class='details' id='giftURL5' href="" class="hidden-sm">More Details</a></button> 
                                     </div>
                                     <div class="clearfix">
                                     </div>
@@ -426,9 +422,8 @@
                                             <p class='priceItem6' class="price-text-color"></p>
                                         </div>
                                     </div>
-                                    <div class="separator clear-left">
-                                        <p class="btn-details">
-                                            <i class="fa fa-list"></i><a class='details' id='giftURL6' href="" class="hidden-sm">More Details</a></p>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetails6" data-balloon="" data-balloon-pos="up" class='details' id='giftURL6' href="" class="hidden-sm">More Details</a></button> 
                                     </div>
                                     <div class="clearfix">
                                     </div>
@@ -447,9 +442,8 @@
                                             <p class='priceItem7' class="price-text-color"></p>
                                         </div>
                                     </div>
-                                    <div class="separator clear-left">
-                                        <p class="btn-details">
-                                            <i class="fa fa-list"></i><a class='details' id='giftURL7' href="" class="hidden-sm">More Details</a></p>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetails7" data-balloon="" data-balloon-pos="up" class='details' id='giftURL7' href="" class="hidden-sm">More Details</a></button> 
                                     </div>
                                     <div class="clearfix">
                                     </div>
@@ -457,9 +451,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
+       			 </div>
+
 
 
 	<!-- FOOTER -->
