--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                         </div>
                                     </div>
                                     <div class="detailButton" class="separator clear-left">
-                                           <button ><a  data-balloon-length="medium" class="showDetails0" data-balloon="" data-balloon-pos="up" class='details' id='giftURL0' href="" class="hidden-sm">More Details</a></button> 
+                                           <button ><a  data-balloon-length="medium" class="showDetails0" data-balloon="" data-balloon-pos="up" class='details' id='giftURL0' href="" target='blank' class="hidden-sm">More Details</a></button> 
                                     </div>
                                     <div class="clearfix">
                                     </div>
@@ -319,7 +319,7 @@
                                         </div>
                                     </div>
                                     <div class="detailButton" class="separator clear-left">
-                                           <button ><a  data-balloon-length="medium" class="showDetails1" data-balloon="" data-balloon-pos="up" class='details' id='giftURL1' href="" class="hidden-sm">More Details</a></button> 
+                                           <button ><a  data-balloon-length="medium" class="showDetails1" data-balloon="" data-balloon-pos="up" class='details' id='giftURL1' href="" target='blank' class="hidden-sm">More Details</a></button> 
                                     </div>
                                     <div class="clearfix">
                                     </div>
@@ -339,7 +339,7 @@
                                         </div>
                                     </div>
                                     <div class="detailButton" class="separator clear-left">
-                                           <button ><a  data-balloon-length="medium" class="showDetails2" data-balloon="" data-balloon-pos="up" class='details' id='giftURL2' href="" class="hidden-sm">More Details</a></button> 
+                                           <button ><a  data-balloon-length="medium" class="showDetails2" data-balloon="" data-balloon-pos="up" class='details' id='giftURL2' href="" target='blank'  class="hidden-sm">More Details</a></button> 
                                     </div>
                                     <div class="clearfix">
                                     </div>
@@ -359,7 +359,7 @@
                                         </div>
                                     </div>
                                     <div class="detailButton" class="separator clear-left">
-                                           <button ><a  data-balloon-length="medium" class="showDetails3" data-balloon="" data-balloon-pos="up" class='details' id='giftURL3' href="" class="hidden-sm">More Details</a></button> 
+                                           <button ><a  data-balloon-length="medium" class="showDetails3" data-balloon="" data-balloon-pos="up" class='details' id='giftURL3' href="" target='blank' class="hidden-sm">More Details</a></button> 
                                     </div>
                                     <div class="clearfix">
                                     </div>
@@ -383,7 +383,7 @@
                                         </div>
                                     </div>
                                     <div class="detailButton" class="separator clear-left">
-                                           <button ><a  data-balloon-length="medium" class="showDetails4" data-balloon="" data-balloon-pos="up" class='details' id='giftURL4' href="" class="hidden-sm">More Details</a></button> 
+                                           <button ><a  data-balloon-length="medium" class="showDetails4" data-balloon="" data-balloon-pos="up" class='details' id='giftURL4' href="" target='blank' class="hidden-sm">More Details</a></button> 
                                     </div>
                                     <div class="clearfix">
                                     </div>
@@ -403,7 +403,7 @@
                                         </div>
                                     </div>
                                     <div class="detailButton" class="separator clear-left">
-                                           <button ><a  data-balloon-length="medium" class="showDetails5" data-balloon="" data-balloon-pos="up" class='details' id='giftURL5' href="" class="hidden-sm">More Details</a></button> 
+                                           <button ><a  data-balloon-length="medium" class="showDetails5" data-balloon="" data-balloon-pos="up" class='details' id='giftURL5' href="" target='blank'  class="hidden-sm">More Details</a></button> 
                                     </div>
                                     <div class="clearfix">
                                     </div>
@@ -423,7 +423,7 @@
                                         </div>
                                     </div>
                                     <div class="detailButton" class="separator clear-left">
-                                           <button ><a  data-balloon-length="medium" class="showDetails6" data-balloon="" data-balloon-pos="up" class='details' id='giftURL6' href="" class="hidden-sm">More Details</a></button> 
+                                           <button ><a  data-balloon-length="medium" class="showDetails6" data-balloon="" data-balloon-pos="up" class='details' id='giftURL6' href="" target='blank' class="hidden-sm">More Details</a></button> 
                                     </div>
                                     <div class="clearfix">
                                     </div>
@@ -443,7 +443,7 @@
                                         </div>
                                     </div>
                                     <div class="detailButton" class="separator clear-left">
-                                           <button ><a  data-balloon-length="medium" class="showDetails7" data-balloon="" data-balloon-pos="up" class='details' id='giftURL7' href="" class="hidden-sm">More Details</a></button> 
+                                           <button ><a  data-balloon-length="medium" class="showDetails7" data-balloon="" data-balloon-pos="up" class='details' id='giftURL7' href="" target='blank'  class="hidden-sm">More Details</a></button> 
                                     </div>
                                     <div class="clearfix">
                                     </div>
