--- a/index.html
+++ b/index.html
@@ -211,25 +211,33 @@
 	<div class="row quest-img marg-0" id="questionnaire">
 		<div class="marg-60">
 			<div class="font-maroon txt-algn-cntr marg-b-40">
-				<p class="font-fam-pacifico font-size-50 ms-fs-30">Questionnaire</p>
-				<p class="font-fam-muli font-size-20">Narrow down your options by answering the following questions about the gift receiver.</p>
+				<p id="questionnaire-title" class="font-fam-pacifico font-size-50 ms-fs-30">Questionnaire</p>
+				<p id="description-p" class="font-fam-muli font-size-20">Narrow down your options by answering the following questions about the gift receiver.</p>
 			</div>
 
 			<div class="font-fam-muli font-maroon txt-algn-cntr">
-				<p class="font-bold font-size-20">This is where question 1 will go.</p>
+				<p id="question-div" class="font-bold font-size-20">This is where question 1 will go.</p>
 				<div class="row">
 					<div class="col-md-6 col-sm-12 pad-10-20">
-						<div class="question-button">Question 1: Option 2</div>
+						<div id="answer-a-div" data-answerId="null" class="JS-answer-choice question-button">Question 1: Option 2</div>
 					</div>
 					<div class="col-md-6 col-sm-12 pad-10-20">
-						<div class="question-button">Question 1: Option 2</div>
+						<div id="answer-b-div" data-answerId="null" class="JS-answer-choice question-button">Question 1: Option 2</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
-
+	<!-- ETSY RESULTS GALLERY -->
+	<div class="row">
+		<div class="gallery js-flickity">
+		  <img class="gallery-cell"  id=etsy0 alt='' src=''>
+		  <img class="gallery-cell"  id=etsy1 alt='' src=''>
+		  <img class="gallery-cell"  id=etsy2 alt='' src=''>
+		  <img class="gallery-cell"  id=etsy3 alt='' src=''>
+		  <img class="gallery-cell"  id=etsy4 alt='' src=''>
+	</div>
 
 <!-- 	<div class="row">
     	<div id="question-div" class="questionHeader"></div>
@@ -262,12 +270,6 @@
 	</div> -->
 
 
-	<!-- my own test divs-->
-	<div id="question-div">FOO</div>
-	<div id="answer-a-div" data-answerId="null" class="JS-answer-choice">BAR</div>
-	<div id="answer-b-div" data-answerId="null" class="JS-answer-choice">BAR</div>
-
-
 
 	<!-- FOOTER -->
 
@@ -285,13 +287,22 @@
 	<!-- BOOTSTRAP JAVASCRIPT -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+	<!-- JAVASCRIPT Flickity-STYLE-->
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+
+    <!-- STYLESHEET Flickity-->
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+
+	<!-- FIREBASE -->
+	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+
 	<!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	<script src="assets/javascript/hmac-sha256.js"></script>
-	<script src="assets/javascript/enc-base64.js"></script>
-	
+	<script src="assets/javascript/enc-base64.js"></script>	
 	<script src="assets/javascript/apis.js"></script>
-    
+	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+
     <!-- JAVASCRIPT APP-QUIZ-->
     <script src="assets/javascript/app-quiz.js" type="text/javascript"></script>
 
