--- a/index.html
+++ b/index.html
@@ -162,49 +162,64 @@
 
 		<div class="row bkgd-white txt-algn-cntr">
 
-
-				<div class="col-md-4 col-sm-6">
-
-				</div>
-
 			<!-- BIRTHDAY -->
-			<div class="col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
 				<img class="img-circle category disp-tabcell marg-auto opacity ms-w-100" src="assets/images/birthday.jpg" alt="Birthday">
 			</div>
 
 			<!-- VALENTINES DAY -->
-			<div class="col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
 				<img class="img-circle category disp-tabcell marg-auto opacity ms-w-100" src="assets/images/valentines.jpg" alt="Valentine's Day">
 			</div>
 
-			<!-- BIRTHDAY -->
-			<div class="col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
+			<!-- FATHER'S DAY -->
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
 				<img class="img-circle category disp-tabcell marg-auto opacity ms-w-100" src="assets/images/fathers.jpg" alt="Father's Day">
 			</div>
 
-			<!-- BIRTHDAY -->
-			<div class="col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
+			<!-- MOTHER'S DAY -->
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
 				<img class="img-circle category disp-tabcell marg-auto opacity ms-w-100" src="assets/images/mothers.jpg" alt="Mother's Day">
 			</div>
 
 			<!-- BIRTHDAY -->
-			<div class="col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
 				<img class="img-circle category disp-tabcell marg-auto opacity ms-w-100" src="assets/images/birthday.jpg" alt="Birthday">
 			</div>
 
 			<!-- BIRTHDAY -->
-			<div class="col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
 				<img class="img-circle category disp-tabcell marg-auto opacity ms-w-100" src="assets/images/birthday.jpg" alt="Birthday">
 			</div>
 
 			<!-- BIRTHDAY -->
-			<div class="col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
 				<img class="img-circle category disp-tabcell marg-auto opacity ms-w-100" src="assets/images/birthday.jpg" alt="Birthday">
 			</div>
 
 
 			<!-- BIRTHDAY -->
-			<div class="col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
+				<img class="img-circle category disp-tabcell marg-auto opacity ms-w-100" src="assets/images/birthday.jpg" alt="Birthday">
+			</div>
+
+			<!-- BIRTHDAY -->
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
+				<img class="img-circle category disp-tabcell marg-auto opacity ms-w-100" src="assets/images/birthday.jpg" alt="Birthday">
+			</div>
+
+			<!-- BIRTHDAY -->
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
+				<img class="img-circle category disp-tabcell marg-auto opacity ms-w-100" src="assets/images/birthday.jpg" alt="Birthday">
+			</div>
+
+			<!-- BIRTHDAY -->
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
+				<img class="img-circle category disp-tabcell marg-auto opacity ms-w-100" src="assets/images/birthday.jpg" alt="Birthday">
+			</div>
+			
+			<!-- BIRTHDAY -->
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
 				<img class="img-circle category disp-tabcell marg-auto opacity ms-w-100" src="assets/images/birthday.jpg" alt="Birthday">
 			</div>
 
@@ -234,12 +249,12 @@
 				<div id="answers-row" class="row">
 
 					<!-- ANSWER A -->
-					<div class="col-md-6 col-sm-12 pad-10-20">
+					<div id="answer-a-container" class="col-md-6 col-sm-12 pad-10-20">
 						<div id="answer-a-div" data-answerId="null" class="JS-answer-choice question-button">Question 1: Option 2</div>
 					</div>
 
 					<!-- ANSWER B -->
-					<div class="col-md-6 col-sm-12 pad-10-20">
+					<div id="answer-b-container" class="col-md-6 col-sm-12 pad-10-20">
 						<div id="answer-b-div" data-answerId="null" class="JS-answer-choice question-button">Question 1: Option 2</div>
 					</div>
 
