--- a/index.html
+++ b/index.html
@@ -288,14 +288,14 @@
             <div class="col-md-12">
                 <!-- Controls -->
                 <div class="controls">
-                    		 <a class="left btn" href="#carousel-example"
+                    		 <a class="left btn" href="#carousel-example-1"
                        		 data-slide="prev">Back</a>
-                       		 <a class="right btn" href="#carousel-example"
+                       		 <a class="right btn" href="#carousel-example-1"
                              data-slide="next">Forward</a>
                 </div>
             </div>
         </div>
-        <div id="carousel-example" class="carousel slide hidden-xs" data-ride="carousel">
+        <div id="carousel-example-1" class="carousel slide hidden-xs" data-ride="carousel">
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
@@ -320,6 +320,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-sm-3">
                             <div class="col-item">
                                 <div class="photo">
@@ -407,7 +408,7 @@
                         <div class="col-sm-3">
                             <div class="col-item">
                                 <div class="photo">
-                                    <img id="etsy5" src="http://placehold.it/350x260" class="img-responsive" alt="a" />
+                                    <img id="etsy5" src="" class="img-responsive" alt="a" />
                                 </div>
                                 <div class="info">
                                     <div class="row">
@@ -427,7 +428,7 @@
                         <div class="col-sm-3">
                             <div class="col-item">
                                 <div class="photo">
-                                    <img id="etsy6" src="http://placehold.it/350x260" class="img-responsive" alt="a" />
+                                    <img id="etsy6" src="" class="img-responsive" alt="a" />
                                 </div>
                                 <div class="info">
                                     <div class="row">
@@ -447,7 +448,7 @@
                         <div class="col-sm-3">
                             <div class="col-item">
                                 <div class="photo">
-                                    <img id="etsy7" src="http://placehold.it/350x260" class="img-responsive" alt="a" />
+                                    <img id="etsy7" src="" class="img-responsive" alt="a" />
                                 </div>
                                 <div class="info">
                                     <div class="row">
@@ -466,10 +467,198 @@
                         </div>
                     </div>
        			 </div>
+			</div>
+		</div>
 
 
+		<!-- EBAY -->
+		<div class="pad-20-0">
+      <p class="font-fam-muli font-size-30 font-maroon marg-b-15 txt-algn-cntr">Ebay</p></div>
 
-
+        <div class="row">
+            <div class="col-md-12">
+                <!-- Controls -->
+                <div class="controls">
+                    		 <a class=" btn" href="#carousel-example-2"
+                       		 data-slide="prev">Back</a>
+                       		 <a class=" btn" href="#carousel-example-2"
+                             data-slide="next">Forward</a>
+                </div>
+            </div>
+        </div>
+        <div id="carousel-example-2" class="carousel slide hidden-xs" data-ride="carousel">
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <div class="col-item">
+                                <div class="photoEbay">
+                                    <img id="ebay0" src='' alt='' class="img-responsive" />
+                                </div>
+                                <div class="info">
+                                    <div class="row">
+                                        <div class="price col-md-12">
+                                            <h5>Price</h5>
+                                            <p class='priceItemEbay0' class="price-text-color"></p>
+                                        </div>
+                                    </div>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetailsEbay0" data-balloon="" data-balloon-pos="up" class='details' id='giftURLEbay0' href="" target='blank' class="hidden-sm">More Details</a></button> 
+                                    </div>
+                                    <div class="clearfix">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="col-item">
+                                <div class="photoEbay">
+                                    <img id="ebay1" src="" class="img-responsive" alt="a" />
+                                </div>
+                                <div class="info">
+                                    <div class="row">
+                                        <div class="price col-md-12">
+                                            <h5>Price</h5>
+                                            <p class='priceItemEbay1' class="price-text-color"></p>
+                                        </div>
+                                    </div>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetailsEbay1" data-balloon="" data-balloon-pos="up" class='details' id='giftURLEbay1' href="" target='blank' class="hidden-sm">More Details</a></button> 
+                                    </div>
+                                    <div class="clearfix">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="col-item">
+                                <div class="photoEbay">
+                                    <img id="ebay2" src="" class="img-responsive" alt="a" />
+                                </div>
+                                <div class="info">
+                                    <div class="row">
+                                        <div class="price col-md-12">
+                                            <h5>Price</h5>
+                                            <p class='priceItemEbay2' class="price-text-color"></p>
+                                        </div>
+                                    </div>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetailsEbay2" data-balloon="" data-balloon-pos="up" class='details' id='giftURLEbay2' href="" target='blank'  class="hidden-sm">More Details</a></button> 
+                                    </div>
+                                    <div class="clearfix">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="col-item">
+                                <div class="photoEbay">
+                                    <img id="ebay3" src="" class="img-responsive" alt="a" />
+                                </div>
+                                <div class="info">
+                                    <div class="row">
+                                        <div class="price col-md-12">
+                                            <h5>Price</h5>
+                                            <p class='priceItemEbay3' class="price-text-color"></p>
+                                        </div>
+                                    </div>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetailsEbay3" data-balloon="" data-balloon-pos="up" class='details' id='giftURLEbay3' href="" target='blank' class="hidden-sm">More Details</a></button> 
+                                    </div>
+                                    <div class="clearfix">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <div class="col-item">
+                                <div class="photoEbay">
+                                    <img id="ebay4" src=" " class="img-responsive" alt="a" />
+                                </div>
+                                <div class="info">
+                                    <div class="row">
+                                        <div class="price col-md-12">
+                                            <h5>Price</h5>
+                                            <p class='priceItemEbay4' class="price-text-color"></p>
+                                        </div>
+                                    </div>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetailsEbay4" data-balloon="" data-balloon-pos="up" class='details' id='giftURLEbay4' href="" target='blank' class="hidden-sm">More Details</a></button> 
+                                    </div>
+                                    <div class="clearfix">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="col-item">
+                                <div class="photoEbay">
+                                    <img id="ebay5" src="" class="img-responsive" alt="a" />
+                                </div>
+                                <div class="info">
+                                    <div class="row">
+                                        <div class="price col-md-12">
+                                            <h5>Price</h5>
+                                            <p class='priceItemEbay5' class="price-text-color"></p>
+                                        </div>
+                                    </div>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetailsEbay5" data-balloon="" data-balloon-pos="up" class='details' id='giftURLEbay5' href="" target='blank'  class="hidden-sm">More Details</a></button> 
+                                    </div>
+                                    <div class="clearfix">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="col-item">
+                                <div class="photoEbay">
+                                    <img id="ebay6" src="" class="img-responsive" alt="a" />
+                                </div>
+                                <div class="info">
+                                    <div class="row">
+                                        <div class="price col-md-12">
+                                            <h5>Price</h5>
+                                            <p class='priceItemEbay6' class="price-text-color"></p>
+                                        </div>
+                                    </div>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetailsEbay6" data-balloon="" data-balloon-pos="up" class='details' id='giftURLEbay6' href="" target='blank' class="hidden-sm">More Details</a></button> 
+                                    </div>
+                                    <div class="clearfix">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="col-item">
+                                <div class="photoEbay">
+                                    <img id="ebay7" src="" class="img-responsive" alt="a" />
+                                </div>
+                                <div class="info">
+                                    <div class="row">
+                                        <div class="price col-md-12">
+                                            <h5>Price</h5>
+                                            <p class='priceItemEbay7' class="price-text-color"></p>
+                                        </div>
+                                    </div>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetailsEbay7" data-balloon="" data-balloon-pos="up" class='details' id='giftURLEbay7' href="" target='blank'  class="hidden-sm">More Details</a></button> 
+                                    </div>
+                                    <div class="clearfix">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+       			 </div>
+			</div>
+		</div>
 	<!-- FOOTER -->
 	<footer class="footer" id="contact">
 
@@ -515,8 +704,9 @@
 	<!-- JAVASCRIPT API-QUIZ -->
 
 	<script src="assets/javascript/apis.js" type="text/javascript"></script>
-
-
+	
+	<!-- JAVASCRIPT Moment -->
+	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
 
 
