--- a/index.html
+++ b/index.html
@@ -35,8 +35,14 @@
 
 <body class="marg-auto" id="home">
 
+
+	<div class="col-md-12 bkgd-cover bkgd-img disp-table h-100 w-100pct">
+
+		<div></div>
+
 	<!-- INTRO -->
 	<div class="bord-box intro-img">
+
 
 		<!-- LOGO/BUTTON CONTAINER -->
 		<div class="disp-tabcell txt-algn-cntr vert-algn-cntr">
@@ -214,6 +220,7 @@
 			<!-- WEDDING -->
 			<div class="col-md-2 col-sm-3 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
 				<img class="img-circle category disp-tabcell marg-auto opacity ms-w-100" src="assets/images/wedding.jpg" alt="Wedding">
+
 			</div>
 
 		</div>
@@ -239,16 +246,16 @@
 				<!-- QUESTION -->
 				<p id="question-div" class="questionHeader font-bold font-size-17"></p>
 
-				<div class="row">
+				<div id="answers-row" class="row">
 
 					<!-- ANSWER A -->
 					<div class="col-md-6 col-sm-12 pad-10-20">
-						<div class="question-button JS-answer-choice" id="answer-a-div" data-answerId="null">Question 1: Option 2</div>
+						<div id="answer-a-div" data-answerId="null" class="JS-answer-choice question-button">Question 1: Option 2</div>
 					</div>
 
 					<!-- ANSWER B -->
 					<div class="col-md-6 col-sm-12 pad-10-20">
-						<div class="question-button JS-answer-choice" id="answer-b-div" data-answerId="null">Question 1: Option 2</div>
+						<div id="answer-b-div" data-answerId="null" class="JS-answer-choice question-button">Question 1: Option 2</div>
 					</div>
 
 				</div>
@@ -268,8 +275,6 @@
 			</div>
 
 		</div>
-
-	</div>
 
 
 
@@ -692,8 +697,24 @@
 	<!-- BOOTSTRAP JAVASCRIPT -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+	<!-- JAVASCRIPT Flickity-STYLE-->
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+
+    <!-- STYLESHEET Flickity-->
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+
+	<!-- FIREBASE -->
+	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+
 	<!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+
+   <!-- JAVASCRIPT HASH PARTY -->
+	<script src="assets/javascript/hmac-sha256.js"></script>
+	<script src="assets/javascript/enc-base64.js"></script>	
+  
+  	<!-- JAVASCRIPT Moment -->
+	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
    
 	<!-- JAVASCRIPT APP-QUIZ -->
     <script src="assets/javascript/app-quiz.js" type="text/javascript"></script>
