--- a/index.html
+++ b/index.html
@@ -35,8 +35,14 @@
 
 <body class="marg-auto" id="home">
 
+
+	<div class="col-md-12 bkgd-cover bkgd-img disp-table h-100 w-100pct">
+
+		<div></div>
+
 	<!-- INTRO -->
 	<div class="bord-box intro-img">
+
 
 		<!-- LOGO/BUTTON CONTAINER -->
 		<div class="disp-tabcell txt-algn-cntr vert-algn-cntr">
@@ -121,19 +127,12 @@
 					<li><a href="#contact" class="font-white">Contact</a></li>
 
 					<!-- <li class="dropdown">
-
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Connect With Me<span class="caret"></span></a>
-
 						<ul class="dropdown-menu" role="menu">
-
 							<li><a href="https://github.com/liz-rondone">Github</a></li>
-
 							<li><a href="https://www.linkedin.com/in/liz-rondone/">LinkedIn</a></li>
-
 							<li><a href="http://stackoverflow.com/users/7264559/liz-ron?tab=profile">Stack Overflow</a></li>
-
 						</ul>
-
 					</li> -->
 
 				</ul>
@@ -214,6 +213,7 @@
 			<!-- WEDDING -->
 			<div class="col-md-2 col-sm-3 col-xs-6 marg-10-0 pad-0 pos-rel txt-algn-cntr vert-algn-cntr">
 				<img class="img-circle category disp-tabcell marg-auto opacity ms-w-100" src="assets/images/wedding.jpg" alt="Wedding">
+
 			</div>
 
 		</div>
@@ -239,16 +239,16 @@
 				<!-- QUESTION -->
 				<p id="question-div" class="questionHeader font-bold font-size-17"></p>
 
-				<div class="row">
+				<div id="answers-row" class="row">
 
 					<!-- ANSWER A -->
 					<div class="col-md-6 col-sm-12 pad-10-20">
-						<div class="question-button JS-answer-choice" id="answer-a-div" data-answerId="null">Question 1: Option 2</div>
+						<div id="answer-a-div" data-answerId="null" class="JS-answer-choice question-button">Question 1: Option 2</div>
 					</div>
 
 					<!-- ANSWER B -->
 					<div class="col-md-6 col-sm-12 pad-10-20">
-						<div class="question-button JS-answer-choice" id="answer-b-div" data-answerId="null">Question 1: Option 2</div>
+						<div id="answer-b-div" data-answerId="null" class="JS-answer-choice question-button">Question 1: Option 2</div>
 					</div>
 
 				</div>
@@ -269,8 +269,6 @@
 
 		</div>
 
-	</div>
-
 
 
 	<!-- PRODUCTS -->
@@ -288,14 +286,14 @@
             <div class="col-md-12">
                 <!-- Controls -->
                 <div class="controls">
-                    		 <a class="left btn" href="#carousel-example"
+                    		 <a class="left btn" href="#carousel-example-1"
                        		 data-slide="prev">Back</a>
-                       		 <a class="right btn" href="#carousel-example"
+                       		 <a class="right btn" href="#carousel-example-1"
                              data-slide="next">Forward</a>
                 </div>
             </div>
         </div>
-        <div id="carousel-example" class="carousel slide hidden-xs" data-ride="carousel">
+        <div id="carousel-example-1" class="carousel slide hidden-xs" data-ride="carousel">
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
@@ -320,6 +318,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-sm-3">
                             <div class="col-item">
                                 <div class="photo">
@@ -407,7 +406,7 @@
                         <div class="col-sm-3">
                             <div class="col-item">
                                 <div class="photo">
-                                    <img id="etsy5" src="http://placehold.it/350x260" class="img-responsive" alt="a" />
+                                    <img id="etsy5" src="" class="img-responsive" alt="a" />
                                 </div>
                                 <div class="info">
                                     <div class="row">
@@ -427,7 +426,7 @@
                         <div class="col-sm-3">
                             <div class="col-item">
                                 <div class="photo">
-                                    <img id="etsy6" src="http://placehold.it/350x260" class="img-responsive" alt="a" />
+                                    <img id="etsy6" src="" class="img-responsive" alt="a" />
                                 </div>
                                 <div class="info">
                                     <div class="row">
@@ -447,7 +446,7 @@
                         <div class="col-sm-3">
                             <div class="col-item">
                                 <div class="photo">
-                                    <img id="etsy7" src="http://placehold.it/350x260" class="img-responsive" alt="a" />
+                                    <img id="etsy7" src="" class="img-responsive" alt="a" />
                                 </div>
                                 <div class="info">
                                     <div class="row">
@@ -466,10 +465,198 @@
                         </div>
                     </div>
        			 </div>
+			</div>
+		</div>
 
 
+		<!-- EBAY -->
+		<div class="pad-20-0">
+      <p class="font-fam-muli font-size-30 font-maroon marg-b-15 txt-algn-cntr">Ebay</p></div>
 
-
+        <div class="row">
+            <div class="col-md-12">
+                <!-- Controls -->
+                <div class="controls">
+                    		 <a class=" btn" href="#carousel-example-2"
+                       		 data-slide="prev">Back</a>
+                       		 <a class=" btn" href="#carousel-example-2"
+                             data-slide="next">Forward</a>
+                </div>
+            </div>
+        </div>
+        <div id="carousel-example-2" class="carousel slide hidden-xs" data-ride="carousel">
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <div class="col-item">
+                                <div class="photoEbay">
+                                    <img id="ebay0" src='' alt='' class="img-responsive" />
+                                </div>
+                                <div class="info">
+                                    <div class="row">
+                                        <div class="price col-md-12">
+                                            <h5>Price</h5>
+                                            <p class='priceItemEbay0' class="price-text-color"></p>
+                                        </div>
+                                    </div>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetailsEbay0" data-balloon="" data-balloon-pos="up" class='details' id='giftURLEbay0' href="" target='blank' class="hidden-sm">More Details</a></button> 
+                                    </div>
+                                    <div class="clearfix">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="col-item">
+                                <div class="photoEbay">
+                                    <img id="ebay1" src="" class="img-responsive" alt="a" />
+                                </div>
+                                <div class="info">
+                                    <div class="row">
+                                        <div class="price col-md-12">
+                                            <h5>Price</h5>
+                                            <p class='priceItemEbay1' class="price-text-color"></p>
+                                        </div>
+                                    </div>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetailsEbay1" data-balloon="" data-balloon-pos="up" class='details' id='giftURLEbay1' href="" target='blank' class="hidden-sm">More Details</a></button> 
+                                    </div>
+                                    <div class="clearfix">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="col-item">
+                                <div class="photoEbay">
+                                    <img id="ebay2" src="" class="img-responsive" alt="a" />
+                                </div>
+                                <div class="info">
+                                    <div class="row">
+                                        <div class="price col-md-12">
+                                            <h5>Price</h5>
+                                            <p class='priceItemEbay2' class="price-text-color"></p>
+                                        </div>
+                                    </div>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetailsEbay2" data-balloon="" data-balloon-pos="up" class='details' id='giftURLEbay2' href="" target='blank'  class="hidden-sm">More Details</a></button> 
+                                    </div>
+                                    <div class="clearfix">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="col-item">
+                                <div class="photoEbay">
+                                    <img id="ebay3" src="" class="img-responsive" alt="a" />
+                                </div>
+                                <div class="info">
+                                    <div class="row">
+                                        <div class="price col-md-12">
+                                            <h5>Price</h5>
+                                            <p class='priceItemEbay3' class="price-text-color"></p>
+                                        </div>
+                                    </div>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetailsEbay3" data-balloon="" data-balloon-pos="up" class='details' id='giftURLEbay3' href="" target='blank' class="hidden-sm">More Details</a></button> 
+                                    </div>
+                                    <div class="clearfix">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <div class="col-item">
+                                <div class="photoEbay">
+                                    <img id="ebay4" src=" " class="img-responsive" alt="a" />
+                                </div>
+                                <div class="info">
+                                    <div class="row">
+                                        <div class="price col-md-12">
+                                            <h5>Price</h5>
+                                            <p class='priceItemEbay4' class="price-text-color"></p>
+                                        </div>
+                                    </div>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetailsEbay4" data-balloon="" data-balloon-pos="up" class='details' id='giftURLEbay4' href="" target='blank' class="hidden-sm">More Details</a></button> 
+                                    </div>
+                                    <div class="clearfix">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="col-item">
+                                <div class="photoEbay">
+                                    <img id="ebay5" src="" class="img-responsive" alt="a" />
+                                </div>
+                                <div class="info">
+                                    <div class="row">
+                                        <div class="price col-md-12">
+                                            <h5>Price</h5>
+                                            <p class='priceItemEbay5' class="price-text-color"></p>
+                                        </div>
+                                    </div>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetailsEbay5" data-balloon="" data-balloon-pos="up" class='details' id='giftURLEbay5' href="" target='blank'  class="hidden-sm">More Details</a></button> 
+                                    </div>
+                                    <div class="clearfix">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="col-item">
+                                <div class="photoEbay">
+                                    <img id="ebay6" src="" class="img-responsive" alt="a" />
+                                </div>
+                                <div class="info">
+                                    <div class="row">
+                                        <div class="price col-md-12">
+                                            <h5>Price</h5>
+                                            <p class='priceItemEbay6' class="price-text-color"></p>
+                                        </div>
+                                    </div>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetailsEbay6" data-balloon="" data-balloon-pos="up" class='details' id='giftURLEbay6' href="" target='blank' class="hidden-sm">More Details</a></button> 
+                                    </div>
+                                    <div class="clearfix">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="col-item">
+                                <div class="photoEbay">
+                                    <img id="ebay7" src="" class="img-responsive" alt="a" />
+                                </div>
+                                <div class="info">
+                                    <div class="row">
+                                        <div class="price col-md-12">
+                                            <h5>Price</h5>
+                                            <p class='priceItemEbay7' class="price-text-color"></p>
+                                        </div>
+                                    </div>
+                                    <div class="detailButton" class="separator clear-left">
+                                           <button ><a  data-balloon-length="medium" class="showDetailsEbay7" data-balloon="" data-balloon-pos="up" class='details' id='giftURLEbay7' href="" target='blank'  class="hidden-sm">More Details</a></button> 
+                                    </div>
+                                    <div class="clearfix">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+       			 </div>
+			</div>
+		</div>
 	<!-- FOOTER -->
 	<footer class="footer" id="contact">
 
@@ -503,8 +690,24 @@
 	<!-- BOOTSTRAP JAVASCRIPT -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+	<!-- JAVASCRIPT Flickity-STYLE-->
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+
+    <!-- STYLESHEET Flickity-->
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+
+	<!-- FIREBASE -->
+	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+
 	<!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+
+   <!-- JAVASCRIPT HASH PARTY -->
+	<script src="assets/javascript/hmac-sha256.js"></script>
+	<script src="assets/javascript/enc-base64.js"></script>	
+  
+  	<!-- JAVASCRIPT Moment -->
+	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
    
 	<!-- JAVASCRIPT APP-QUIZ -->
     <script src="assets/javascript/app-quiz.js" type="text/javascript"></script>
@@ -515,8 +718,9 @@
 	<!-- JAVASCRIPT API-QUIZ -->
 
 	<script src="assets/javascript/apis.js" type="text/javascript"></script>
-
-
+	
+	<!-- JAVASCRIPT Moment -->
+	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
 
 
