holiday objects filled in with amazon and etsy, quiz  reset function also in place

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 		<div class="font-maroon txt-algn-cntr marg-b-40">
 			<p class="font-fam-pacifico font-size-50 ms-fs-35">Occasions</p>
-			<p class="font-fam-muli font-size-23">Filter your search by selecting the event you're shopping for.</p>
+			<p class="font-fam-muli font-size-23">Jump start search by selecting the event you're shopping for.</p>
 		</div>
 
 		<div class="row bkgd-white txt-algn-cntr">
