--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 					<li><a href="#questionnaire" class="font-white">Questionnaire</a></li>
 
-					<li><a href="#products" class="font-white">Products</a></li>
+					<li><a href="#products" class="font-white">Gift Options</a></li>
 
 					<li><a href="#contact" class="font-white">Contact</a></li>
 
@@ -231,7 +231,7 @@
 
 			<!-- QUESTIONNAIRE HEADING -->
 			<div class="font-maroon txt-algn-cntr marg-b-40">
-				<p id="questionnaire-header-title" class="font-fam-pacifico font-size-50 ms-fs-35">Questionnaire</p>
+				<p class="font-fam-pacifico font-size-50 ms-fs-35">Questionnaire</p>
 				<p id="questionnaire-header-description" class="font-fam-muli font-size-23">Narrow down your options by answering the following questions about the gift receiver.</p>
 			</div>
 
@@ -279,7 +279,7 @@
 	<div class="pad-60 ms-pad-30" id="products">
 
 		<div class="">
-			<p class="font-fam-pacifico font-maroon font-size-50 txt-algn-cntr ms-fs-35">Products</p>
+			<p class="font-fam-pacifico font-maroon font-size-50 txt-algn-cntr ms-fs-35" id="questionnaire-header-title">Gift Options</p>
 		</div>
 
 		<!-- ETSY -->
